--- a/.github/workflows/Devcard.yml
+++ b/.github/workflows/Devcard.yml
@@ -1,3 +1,4 @@
+name: DevCard
 permissions:
   contents: write
 
@@ -8,8 +9,8 @@ on:
       - main
   schedule:
     - cron: "0 0 * * *"
-
-    jobs:
+  
+  jobs:
   devcard:
     runs-on: ubuntu-latest
     steps:
